--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="CmdUsage\CmdOption.cs" />
     <Compile Include="CmdUsage\CmdUsage.cs" />
+    <Compile Include="Export\ExportCSharp.cs" />
     <Compile Include="Export\ExportCsv.cs" />
     <Compile Include="LocalInfo\FileInfo.cs" />
     <Compile Include="LocalInfo\FindInfo.cs" />
