--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="CmdUsage\CmdOption.cs" />
     <Compile Include="CmdUsage\CmdUsage.cs" />
+    <Compile Include="Export\CodeWriter.cs" />
     <Compile Include="Export\ExportCSharp.DataOp.cs" />
     <Compile Include="Export\ExportCSharp.XmlOp.cs" />
     <Compile Include="Export\ExportCsv.cs" />
