--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -72,6 +72,7 @@
     <Compile Include="LocalInfo\TableInfo.Data.cs" />
     <Compile Include="LocalInfo\TableInfo.Define.cs" />
     <Compile Include="LocalInfo\TableInfo.Lson.cs" />
+    <Compile Include="LocalInfo\TableInfo.CheckCustom.cs" />
     <Compile Include="TableOption.cs" />
     <Compile Include="LocalInfo\TableInfo.cs" />
     <Compile Include="LocalInfo\TypeInfo.cs" />
