--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="CmdOption.cs" />
     <Compile Include="Export\CodeWriter.cs" />
-    <Compile Include="Export\ExportCSharp.DataOp.cs" />
+    <Compile Include="Export\ExportCSharp.CodeOp.cs" />
     <Compile Include="Export\ExportCSharp.XmlOp.cs" />
     <Compile Include="Export\ExportCsv.cs" />
     <Compile Include="Export\ExportLua.cs" />
