--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -56,7 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CmdOption.cs" />
+    <Compile Include="Description\ClassDes.cs" />
     <Compile Include="Description\ConfigXml.cs" />
+    <Compile Include="Description\EnumDes.cs" />
+    <Compile Include="Description\FieldDes.cs" />
+    <Compile Include="Description\NamespaceDes.cs" />
     <Compile Include="Export\CodeWriter.cs" />
     <Compile Include="Export\ExportCSharp.CodeOp.cs" />
     <Compile Include="Export\ExportCSharp.XmlOp.cs" />
@@ -67,7 +71,6 @@
     <Compile Include="LocalInfo\TableInfo.Data.cs" />
     <Compile Include="LocalInfo\TableInfo.Xml.cs" />
     <Compile Include="LocalInfo\TableInfo.CheckCustom.cs" />
-    <Compile Include="Description\TypeDescription.cs" />
     <Compile Include="LocalInfo\TableInfo.cs" />
     <Compile Include="LocalInfo\TypeInfo.cs" />
     <Compile Include="Program.cs" />
