--- a/ConfigGen/ConfigGen.csproj
+++ b/ConfigGen/ConfigGen.csproj
@@ -56,6 +56,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CmdOption.cs" />
+    <Compile Include="Data\Data.cs" />
+    <Compile Include="Data\FBool.cs" />
+    <Compile Include="Data\FClass.cs" />
+    <Compile Include="Data\FDict.cs" />
+    <Compile Include="Data\FEnum.cs" />
+    <Compile Include="Data\FFloat.cs" />
+    <Compile Include="Data\FInt.cs" />
+    <Compile Include="Data\FList.cs" />
+    <Compile Include="Data\FLong.cs" />
+    <Compile Include="Data\FString.cs" />
     <Compile Include="Description\ClassDes.cs" />
     <Compile Include="Description\ConfigXml.cs" />
     <Compile Include="Description\EnumDes.cs" />
@@ -75,6 +85,11 @@
     <Compile Include="LocalInfo\TypeInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeInfo\ClassInfo.cs" />
+    <Compile Include="TypeInfo\Config.cs" />
+    <Compile Include="TypeInfo\ConstInfo.cs" />
+    <Compile Include="TypeInfo\EnumInfo.cs" />
+    <Compile Include="TypeInfo\FieldInfo.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Values.cs" />
   </ItemGroup>
