--- a/Description/App.config
+++ b/Description/App.config
@@ -19,6 +19,9 @@
             <setting name="LastModule" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DataDir" serializeAs="String">
+                <value>.</value>
+            </setting>
         </Description.Properties.Settings>
     </userSettings>
 </configuration>
