--- a/Description/Description.csproj
+++ b/Description/Description.csproj
@@ -49,16 +49,35 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassInfoDock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ClassInfoDock.Designer.cs">
+      <DependentUpon>ClassInfoDock.cs</DependentUpon>
+    </Compile>
     <Compile Include="ClassMemberPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ClassMemberPanel.Designer.cs">
       <DependentUpon>ClassMemberPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="ConsoleDock.cs">
+    <Compile Include="EnumInfoDock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EnumInfoDock.Designer.cs">
+      <DependentUpon>EnumInfoDock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PoolManager.cs" />
+    <Compile Include="Wrap\BaseWrap.cs" />
+    <Compile Include="Wrap\ClassWrap.cs" />
+    <Compile Include="Wrap\EnumItemWrap.cs" />
+    <Compile Include="Wrap\EnumWrap.cs" />
+    <Compile Include="Wrap\FieldWrap.cs" />
+    <Compile Include="Wrap\NamespaceWrap.cs" />
+    <Compile Include="Console\ConsoleDock.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConsoleDock.Designer.cs">
+    <Compile Include="Console\ConsoleDock.Designer.cs">
       <DependentUpon>ConsoleDock.cs</DependentUpon>
     </Compile>
     <Compile Include="CreatorDock.cs">
@@ -67,7 +86,7 @@
     <Compile Include="CreatorDock.Designer.cs">
       <DependentUpon>CreatorDock.cs</DependentUpon>
     </Compile>
-    <Compile Include="Log.cs" />
+    <Compile Include="Console\Log.cs" />
     <Compile Include="FindNamespaceDock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,14 +120,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Xml\TypeXml.cs" />
+    <EmbeddedResource Include="ClassInfoDock.resx">
+      <DependentUpon>ClassInfoDock.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ClassMemberPanel.resx">
       <DependentUpon>ClassMemberPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ConsoleDock.resx">
+    <EmbeddedResource Include="Console\ConsoleDock.resx">
       <DependentUpon>ConsoleDock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreatorDock.resx">
       <DependentUpon>CreatorDock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EnumInfoDock.resx">
+      <DependentUpon>EnumInfoDock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
@@ -168,16 +193,9 @@
     <None Include="Resources\TriangleDown.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Info.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SpeechBubbleSquare.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\ConsoleWarnicon.png" />
     <None Include="Resources\ConsoleErroricon.png" />
     <None Include="Resources\ConsoleInfoIcon.png" />
-    <Content Include="Resources\House.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
