--- a/Description/Properties/Settings.settings
+++ b/Description/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LastModule" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DataDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
