--- a/Description/Description.csproj
+++ b/Description/Description.csproj
@@ -33,8 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,25 +53,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClassInfoDock.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Editor\EditorDock.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClassInfoDock.Designer.cs">
-      <DependentUpon>ClassInfoDock.cs</DependentUpon>
+    <Compile Include="Editor\EditorDock.Designer.cs">
+      <DependentUpon>EditorDock.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClassMemberPanel.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Editor\EnumEditorDock.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClassMemberPanel.Designer.cs">
-      <DependentUpon>ClassMemberPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="EnumInfoDock.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="EnumInfoDock.Designer.cs">
-      <DependentUpon>EnumInfoDock.cs</DependentUpon>
+    <Compile Include="Editor\EnumEditorDock.Designer.cs">
+      <DependentUpon>EnumEditorDock.cs</DependentUpon>
     </Compile>
     <Compile Include="PoolManager.cs" />
+    <Compile Include="TypeBox.cs">
+      <SubType>UserControl</SubType>
+      <Generator>TypeBox</Generator>
+      <CustomToolNamespace>Description</CustomToolNamespace>
+    </Compile>
+    <Compile Include="TypeBox.Designer.cs">
+      <DependentUpon>TypeBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Wrap\BaseWrap.cs" />
     <Compile Include="Wrap\ClassWrap.cs" />
     <Compile Include="Wrap\EnumItemWrap.cs" />
@@ -94,11 +100,11 @@
     <Compile Include="FindNamespaceDock.Designer.cs">
       <DependentUpon>FindNamespaceDock.cs</DependentUpon>
     </Compile>
-    <Compile Include="TypeEditorDock.cs">
+    <Compile Include="Editor\ClassEditorDock.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TypeEditorDock.Designer.cs">
-      <DependentUpon>TypeEditorDock.cs</DependentUpon>
+    <Compile Include="Editor\ClassEditorDock.Designer.cs">
+      <DependentUpon>ClassEditorDock.cs</DependentUpon>
     </Compile>
     <Compile Include="Xml\ClassXml.cs" />
     <Compile Include="Xml\EnumXml.cs" />
@@ -111,37 +117,25 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="EnumMemberPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="EnumMemberPanel.Designer.cs">
-      <DependentUpon>EnumMemberPanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Xml\TypeXml.cs" />
-    <EmbeddedResource Include="ClassInfoDock.resx">
-      <DependentUpon>ClassInfoDock.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ClassMemberPanel.resx">
-      <DependentUpon>ClassMemberPanel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Console\ConsoleDock.resx">
       <DependentUpon>ConsoleDock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreatorDock.resx">
       <DependentUpon>CreatorDock.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EnumInfoDock.resx">
-      <DependentUpon>EnumInfoDock.cs</DependentUpon>
+    <EmbeddedResource Include="Editor\EditorDock.resx">
+      <DependentUpon>EditorDock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editor\EnumEditorDock.resx">
+      <DependentUpon>EnumEditorDock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
       <LastGenOutput>DescriptorWindow1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EnumMemberPanel.resx">
-      <DependentUpon>EnumMemberPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FindNamespaceDock.resx">
       <DependentUpon>FindNamespaceDock.cs</DependentUpon>
@@ -156,8 +150,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TypeEditorDock.resx">
-      <DependentUpon>TypeEditorDock.cs</DependentUpon>
+    <EmbeddedResource Include="Editor\ClassEditorDock.resx">
+      <DependentUpon>ClassEditorDock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TypeBox.resx">
+      <DependentUpon>TypeBox.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
