添加枚举,选项描述,命名空间属性修改

--- a/Description/App.config
+++ b/Description/App.config
@@ -19,8 +19,16 @@
             <setting name="LastModule" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Groups" serializeAs="String">
-                <value>All:Client:Server:Editor</value>
+            <setting name="Groups" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>All</string>
+                        <string>Client</string>
+                        <string>Editor</string>
+                        <string>Server</string>
+                    </ArrayOfString>
+                </value>
             </setting>
             <setting name="DataDir" serializeAs="String">
                 <value>.</value>
