--- a/Description/Description.csproj
+++ b/Description/Description.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Console\Debug.cs" />
     <Compile Include="Editor\EditorDock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +77,12 @@
     </Compile>
     <Compile Include="Editor\FieldEditor.Designer.cs">
       <DependentUpon>FieldEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Editor\GroupDock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Editor\GroupDock.Designer.cs">
+      <DependentUpon>GroupDock.cs</DependentUpon>
     </Compile>
     <Compile Include="Editor\MemberEditor.cs">
       <SubType>UserControl</SubType>
@@ -164,6 +171,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Editor\FieldEditor.resx">
       <DependentUpon>FieldEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Editor\GroupDock.resx">
+      <DependentUpon>GroupDock.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
