添加继承关系数据

--- a/Description/Description.csproj
+++ b/Description/Description.csproj
@@ -240,5 +240,8 @@
     <None Include="Resources\ConsoleErroricon.png" />
     <None Include="Resources\ConsoleInfoIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Export\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
