完成数据导出测试

--- a/DDL/Desc/App.config
+++ b/DDL/Desc/App.config
@@ -29,7 +29,7 @@
                 </value>
             </setting>
             <setting name="DataDir" serializeAs="String">
-                <value>.</value>
+                <value>..\Excel\</value>
             </setting>
         </Desc.Properties.Settings>
         <Description.Properties.Settings>
