--- a/ddl/Example/Desc.exe.config
+++ b/ddl/Example/Desc.exe.config
@@ -29,7 +29,7 @@
                 </value>
             </setting>
             <setting name="DataDir" serializeAs="String">
-                <value>.</value>
+                <value>..\Excel\</value>
             </setting>
         </Desc.Properties.Settings>
         <Description.Properties.Settings>
