描述工具模块管理内容调整
公共类需要基于模块,每一个模块一个公共命名空间

--- a/DDL/Desc/Desc.csproj
+++ b/DDL/Desc/Desc.csproj
@@ -88,7 +88,7 @@
     <Compile Include="ModuleInfoDock.Designer.cs">
       <DependentUpon>ModuleInfoDock.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModuleMgr.cs" />
+    <Compile Include="WrapManager.cs" />
     <Compile Include="NamespaceInfoDock.cs">
       <SubType>Form</SubType>
     </Compile>
