--- a/ConfigGen_old/ConfigGen.csproj
+++ b/ConfigGen_old/ConfigGen.csproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{ADCEBA5D-9CAD-47EF-A9DC-C32BEE858E75}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Tool</RootNamespace>
-    <AssemblyName>Tool</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <RootNamespace>ConfigGen</RootNamespace>
+    <AssemblyName>ConfigGen</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -25,18 +25,16 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Example\</OutputPath>
+    <OutputPath>..\Example\Example\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,7 +44,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -69,30 +66,27 @@
     <Compile Include="Config\FList.cs" />
     <Compile Include="Config\FLong.cs" />
     <Compile Include="Config\FString.cs" />
-    <Compile Include="Export\Gen_CS.cs" />
-    <Compile Include="Export\Gen_Data.cs" />
-    <Compile Include="Export\Gen_XmlCode.cs" />
-    <Compile Include="Xml\ClassXml.cs" />
-    <Compile Include="Xml\ConfigXml.cs" />
-    <Compile Include="Xml\EnumXml.cs" />
-    <Compile Include="Xml\FieldXml.cs" />
-    <Compile Include="Xml\ModuleXml.cs" />
-    <Compile Include="Xml\NamespaceXml.cs" />
+    <Compile Include="Description\ClassXml.cs" />
+    <Compile Include="Description\ConfigXml.cs" />
+    <Compile Include="Description\EnumXml.cs" />
+    <Compile Include="Description\FieldXml.cs" />
+    <Compile Include="Description\NamespaceXml.cs" />
     <Compile Include="Export\CodeWriter.cs" />
     <Compile Include="Export\ExportCSharp.cs" />
     <Compile Include="Export\ExportXmlCode.cs" />
     <Compile Include="Export\ExportCsv.cs" />
-    <Compile Include="Export\Gen_Lua.cs" />
+    <Compile Include="Export\ExportLua.cs" />
     <Compile Include="Import\Import.cs" />
     <Compile Include="Import\ImportXml.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Import\ImportExcel.cs" />
-    <Compile Include="Wrap\ClassWrap.cs" />
-    <Compile Include="Wrap\ConfigWrap.cs" />
-    <Compile Include="Wrap\EnumWrap.cs" />
-    <Compile Include="Wrap\FieldWrap.cs" />
-    <Compile Include="Wrap\GroupWrap.cs" />
+    <Compile Include="TypeInfo\ClassInfo.cs" />
+    <Compile Include="TypeInfo\ConfigInfo.cs" />
+    <Compile Include="TypeInfo\ConstInfo.cs" />
+    <Compile Include="TypeInfo\EnumInfo.cs" />
+    <Compile Include="TypeInfo\FieldInfo.cs" />
+    <Compile Include="TypeInfo\GroupInfo.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Setting.cs" />
   </ItemGroup>
@@ -103,8 +97,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
