--- a/DDL/Tool/Tool.csproj
+++ b/DDL/Tool/Tool.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Config\FLong.cs" />
     <Compile Include="Config\FString.cs" />
     <Compile Include="Export\Gen_CS.cs" />
+    <Compile Include="Export\Gen_Binary.cs" />
     <Compile Include="Export\Gen_Data.cs" />
     <Compile Include="Export\Gen_XmlCode.cs" />
     <Compile Include="Message\MessagePackBinary.cs" />
