--- a/src/Tool/Tool.csproj
+++ b/src/Tool/Tool.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Export\Gen_XmlCode.cs" />
     <Compile Include="Message\MessagePackBinary.cs" />
     <Compile Include="Message\MessagePackCode.cs" />
+    <Compile Include="Wrap\ConstWrap.cs" />
     <Compile Include="Xml\ClassXml.cs" />
     <Compile Include="Xml\ConfigXml.cs" />
     <Compile Include="Xml\EnumXml.cs" />
